--- a/AndroidExtreamContest/res/layout/main.xml
+++ b/AndroidExtreamContest/res/layout/main.xml
@@ -6,14 +6,13 @@
 
     <GridView
         android:id="@+id/lifeGrid"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="10"
-        android:columnWidth="2dp"
-        android:horizontalSpacing="0px"
+        android:horizontalSpacing="1px"
         android:numColumns="7"
-        android:verticalSpacing="0px" android:background="#ffffff">
+        android:verticalSpacing="1px" android:background="#ffffff">
 
     </GridView>
 
@@ -24,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:onClick="update"
         android:text="stop and start" />
 
 </LinearLayout>
