--- a/AndroidExtreamContest/res/layout/item.xml
+++ b/AndroidExtreamContest/res/layout/item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_width="wrap_content"
+    android:orientation="vertical" android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/cellText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="10sp" />
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:text=""/>
 
 </LinearLayout>
